apps/demo3/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-demo3
  namespace: backstage-demo3
spec:
  ingressClassName: nginx
  rules:
  - host: backstage-demo3-prod.colin.developers.davra.io
    http:
      paths:
      - backend:
          service:
            name: backstage-demo3
            port:
              number: 8080
        path: /
        pathType: Prefix
